# the-red-council

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  backlog.md  docker-compose.yml  pyproject.toml  red-team-in-a-box-blueprint-v0.3.md  requirements.txt
.github/workflows/: test.yml
data/demo/: scenarios.json
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.vulnerable-agent
docs/: 2026-02-03-demo-ux-implementation.md  2026-02-03-demo-ux-redesign.md  agent-attack-data.md  agent-testing-guide.md  api-reference.md  architecture.md  configuration.md  demo_script.md  development.md  evaluation-rubric.md  quickstart.md  security.md  threat-model.md
docs/plans/: 2026-02-03-public-website-implementation.md
docs/tutorials/: custom-attacks.md  external-targets.md  openclaw-integration.md  testing-llm.md
examples/agent_testing/: __init__.py  basic_test.py  custom_agent.py  langchain_example.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CodeSnippet.test.tsx  CodeSnippet.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ModeSelector.test.tsx  ModeSelector.tsx  ShortcutsModal.test.tsx  ShortcutsModal.tsx
frontend/data/: demo-events.json  guide-steps.ts  owasp-categories.ts  sdk-snippets.ts
frontend/hooks/: useArenaState.ts  useCampaign.test.ts  useCampaign.ts  useDashboardStats.ts  useDemoPlayback.ts  useEventStream.test.ts  useEventStream.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMediaQuery.test.ts  useMediaQuery.ts  useProgressSync.ts  useSessionPersistence.test.ts  useSessionPersistence.ts  useTypingAnimation.ts
frontend/lib/: maskSecret.ts  types.ts  utils.ts
frontend/stores/: actions.ts  battleHistory.ts  onboarding.test.ts  onboarding.ts  remoteAgent.test.ts  remoteAgent.ts  settings.test.ts  settings.ts  testingMode.test.ts  testingMode.ts
integrations/: README.md
integrations/openclaw/: SKILL.md  skill.json
public/: index.html  styles.css
ralph/: prd.json  progress.txt  prompt.md  ralph-monitor.sh  ralph-supervisor.sh  ralph-watchdog.sh  ralph.sh  state.json  unified-interface-prd.json
scripts/: curate_datasets.py  seed_kb.py  test_agent_judge_integration.py  test_api.py  test_sse.py  test_vulnerable_agent.py  validate_mocks.py  verify_e2e_live.py
specs/: product-spec.md
specs/components/: arena-orchestrator.md  attacker-agent.md  defender-agent.md  documentation.md  gemini-3-integration.md  judge-agent.md  knowledge-base.md  model-config.md  test-coverage.md  ui.md  verifier-agent.md
src/: cli.py
src/agents/: agent_defender.py  agent_judge.py  attacker.py  common.py  defender.py  divergence.py  errors.py  instrumented.py  judge.py  target.py  verifier.py
src/api/: agent_routes.py  main.py  models.py  routes.py  security.py
src/config/: defaults.py  loader.py  models.py
src/core/: agent_report.py  agent_schemas.py  owasp_agentic.py  schemas.py  security.py
src/integrations/: __init__.py  langchain_adapter.py  langgraph_adapter.py  mcp_adapter.py
src/knowledge/: agent_attack_sources.py  agent_attacks.py  agent_seed_data.py  attack_kb.py  seed_agents.py  seed_data.py  taxonomy.py
src/mocks/: mock_client.py  responses.json
src/orchestrator/: agent_campaign.py  agent_nodes.py  graph.py  nodes.py  registry.py  runner.py  state.py
src/providers/: base.py  errors.py  gemini_client.py  openai_client.py  types.py  universal.py  vertex_llama.py
src/reports/: __init__.py  agent_report_generator.py
src/test_agents/: __init__.py  http_server.py  vulnerable_agent.py
src/ui/: async_utils.py  dashboard.py  state_utils.py
tests/: conftest.py  test_agents.py  test_attack_kb.py  test_config_loader.py  test_gemini_client.py  test_orchestrator.py  test_registry.py  test_runner.py  test_universal_provider.py  test_vertex_llama.py
tests/agents/: test_agent_defender.py  test_agent_judge.py  test_divergence.py  test_instrumented.py
tests/api/: __init__.py  test_agent_routes.py
tests/core/: test_agent_report.py  test_agent_schemas.py  test_agent_schemas_score.py  test_owasp_agentic.py
tests/e2e/: __init__.py  conftest.py  test_agent_flow.py  test_langchain_e2e.py
tests/integration/: test_api.py  test_arena_e2e.py  test_phase2_smoke.py
tests/integrations/: __init__.py  test_langchain.py  test_langgraph.py  test_mcp.py
tests/knowledge/: test_agent_attack_sources.py  (+3 more)
(+213 files in other folders)
